# aicli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
wb_aicli/: __init__.py  main.py
