[tool.poetry]
name = "wb-aicli"
version = "0.1.1"
description = "A copy-cat version of Samuel Colvin's aicli implemented with Mirascope and Typer"
license = "MIT"
authors = ["William Bakst <william@mirascope.io>"]
readme = "README.md"
repository = "https://github.com/willbakst/aicli"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet",
    "Topic :: Communications :: Chat",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Environment :: Console",
]

[tool.poetry.scripts]
wb = 'wb_aicli.main:app'

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# A list of optional dependencies that are required for certain features
mirascope = { version = "^0.2.3", extras = ["openai"] }
typer = { version = "^0.9.0", extras = ["all"] }
rich = "^13.7.0"
prompt-toolkit = "^3.0.43"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
ruff = "^0.1.5"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
target-version = "py38"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
